--- a/assets/www/css/index.css
+++ b/assets/www/css/index.css
@@ -149,3 +149,111 @@ h1 {
                 margin:3px 0px 3px 5px;  
     }  
 
+div.examplePDFCompany {
+				display: block;
+				padding: 10px 20px;
+				color: black;
+				background: rgba(255, 255, 255, 0.4);
+				-webkit-border-radius: 8px;
+				-khtml-border-radius: 8px;
+				-moz-border-radius: 8px;
+				border-radius: 8px;
+				margin-bottom: 20px;
+				border: 1px solid rgba(0, 0, 0, 0.2);
+			
+}
+
+			.drag {
+                        float: left;
+                        width: 21%;
+                        background-color: Green;
+                        color: White;
+                        margin: 10px 2%;
+                        cursor: move;
+                        text-align: center;
+                        -moz-border-radius: 1em;
+                        -webkit-border-radius: 1em;
+                        border-radius: 1em;
+                }
+                
+                .selected {
+                        background-color: Yellow;
+                        color: Black;
+                }
+                
+                .drop {
+                        background-color: Blue;
+                        color: White;
+                        margin: 3px;
+                        padding: 10px;
+                        -moz-border-radius: 1em;
+                        -webkit-border-radius: 1em;
+                        border-radius: 1em;
+                }
+                .active {
+                        background-color: orange;
+                        cursor: crosshair;
+                }
+            #box-orient-example {
+				height: 260px;
+				display: -webkit-box;
+				-webkit-box-orient: horizontal;
+				display: -moz-box;
+				-moz-box-orient: horizontal;
+			}
+         
+			.descCom{
+				-webkit-column-count: 2;
+				-webkit-column-rule: 1px solid #bbb;
+				-webkit-column-gap: 2em;
+				-moz-column-count: 2;
+				-moz-column-rule: 1px solid #bbb;
+				-moz-column-gap: 2em;
+				column-count: 2;
+				column-rule: 1px solid #bbb;
+				column-gap: 2em;
+				
+			}
+			#columns-no-example1 {
+				-webkit-column-count: 2;
+				-webkit-column-rule: 1px solid #bbb;
+				-webkit-column-gap: 2em;
+				-moz-column-count: 2;
+				-moz-column-rule: 1px solid #bbb;
+				-moz-column-gap: 2em;
+				column-count: 2;
+				column-rule: 1px solid #bbb;
+				column-gap: 2em;
+			}
+			#columns-no-example2 {
+				-webkit-column-count: 2;
+				-webkit-column-rule: 1px solid #bbb;
+				-webkit-column-gap: 2em;
+				-moz-column-count: 2;
+				-moz-column-rule: 1px solid #bbb;
+				-moz-column-gap: 2em;
+				column-count: 2;
+				column-rule: 1px solid #bbb;
+				column-gap: 2em;
+			}
+			div.example {
+				display: block;
+				padding: 10px 20px;
+				color: black;
+				background: rgba(255, 255, 255, 0.4);
+				-webkit-border-radius: 8px;
+				-khtml-border-radius: 8px;
+				-moz-border-radius: 8px;
+				border-radius: 8px;
+				margin-bottom: 10px;
+				border: 1px solid rgba(0, 0, 0, 0.2);
+			}
+			
+			
+			#box-orient-example div:nth-child(2) {
+				background: #ddd;
+				padding: 10px;
+				-webkit-box-flex: 1;
+				-moz-box-flex: 1;
+				text-align: center;
+			}
